log
ju., 21 de abr. de 2022 11:15:16: 
 tests:  1|8
total_score: 0/70
bf556b9
ju., 21 de abr. de 2022 11:37:45: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  8|7
total_score: 10/70
e3112fd
Sun Apr 24 15:05:31 HSP 2022: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
5faa4e2
Sun Apr 24 15:24:07 HSP 2022: 
 treemap.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:23: error: incompatible types when assigning to type 'TreeNode * {aka struct TreeNode *}' from type 'TreeNode {aka struct TreeNode}'
             aux->left = n;
                       ^
treemap.c:55:14: error: invalid type argument of '->' (have 'TreeNode {aka struct TreeNode}')
             n->parent = aux;
              ^~
treemap.c: In function 'nextTreeMap':
treemap.c:134:25: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         tree->current = minimun(tree->current->right);
                         ^~~~~~~
treemap.c:134:23: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         tree->current = minimun(tree->current->right);
                       ^
treemap.c:137:16: error: 'tre' undeclared (first use in this function)
         return tre->current->pair;
                ^~~
treemap.c:137:16: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
39fa436
